# EffinDOM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  NativeDeps.lock.json  QUICKSTART.md  README.md  WasmDeps.lock.json  eslint.config.ts  package-lock.json  package-wasm-deps.sh  package.json
v2/: CMakeLists.txt
v2/browser-bridge/: package.json  tsconfig.json
v2/browser-bridge/scripts/: build.sh
v2/browser-bridge/src/: bridge.ts  clipboard.ts  core-types.ts  find-on-page.ts  index.ts  managed-harness.ts  open-canvas.ts  routed-harness.ts  runtime-config.ts  semantic.ts
v2/browser-bridge/src/bridge/: events.ts  find-dialog.ts  find-session.ts  font-catalog.ts  google-fonts.ts  incremental-font-packages.ts  interaction.ts  local-types.ts  platform.ts  pointer-move-coalescer.ts  pull-to-refresh.ts  render-loop.ts  runtime.ts  touch-gesture.ts
v2/browser-bridge/src/bridge/events/: key-router.ts  pointer-router.ts  semantic-hit-testing.ts
v2/browser-bridge/src/bridge/interaction/: editor-model.ts  editor-mutations.ts  editor-session.ts
v2/browser-bridge/src/bridge/runtime/: asset-manager.ts  find-controller.ts  font-manager.ts  (+4 more)
v2/browser-bridge/src/managed-harness/: managed-harness.ts  types.ts
v2/browser-bridge/tests/: accessibility.spec.ts  backend.browser.spec.ts  global-setup.ts  global-teardown.ts  incremental-fonts.spec.ts  keyboard.spec.ts  pointer-input.spec.ts  recovery.spec.ts  test-utils.ts
v2/core/: CMakeLists.txt  exports.txt  native-exports.apple  native-exports.map  playwright.config.ts  tsconfig.json
v2/core/browser/: index.html
v2/core/cmake/: SkiaNative.cmake
v2/core/include/: effindom.h
v2/core/scripts/: build_all.sh  build_wasm_arch.sh
v2/core/src/: Engine.cpp  Engine.h  EngineCanvas.cpp  EngineCommand.cpp  EngineInternal.h  EngineRender.cpp  EngineShared.cpp  SvgIntrinsicSize.cpp  SvgIntrinsicSize.h  Wasm.cpp
v2/core/tests/: CommandBuilder.h  fuzz_command_buffer.cpp  generate_goldens.cpp  test_canvas.cpp  test_engine.cpp
v2/core/tests/integration/: effindom_core.spec.ts
v2/native/: LINUX_NATIVE_HOST_PLAN.md
v2/native/common/: CMakeLists.txt  NATIVE_PLATFORM_DIFFERENCES.md  NativeCommonContractTests.cmake
v2/native/common/include/: NativeAccessibility.h  NativeAssetService.h  NativeContextMenuCoordinator.h  NativeFuiBridge.h  NativeFuiRuntimeBridge.h  NativeGraphicsCoordinator.h  NativeGraphicsSurface.h  NativeHost.h  NativeHostContract.h  NativeHostCore.h  NativeHostState.h  NativeInputRouter.h  NativeInputTypes.h  NativePlatformFactory.h  NativePlatformHost.h  NativeRasterSurface.h  NativeUtf8.h  SdlDropTarget.h  SdlEventAdapter.h  SdlFileDialogs.h  SdlUiDispatcher.h
v2/native/common/src/: NativeAccessibility.cpp  NativeApplicationMain.cpp  NativeAssetService.cpp  NativeContextMenuCoordinator.cpp  NativeFuiHostStubs.cpp  NativeFuiRuntimeBridge.cpp  NativeGraphicsCoordinator.cpp  NativeHost.cpp  NativeHostCore.cpp  NativeInputRouter.cpp  NativeRasterSurface.cpp  SdlDropTarget.cpp  SdlEventAdapter.cpp  SdlFileDialogs.cpp  SdlUiDispatcher.cpp
v2/native/common/tests/: NativeHostCharacterization.h  test_native_accessibility.cpp  test_native_asset_service.cpp  test_native_context_menu_coordinator.cpp  test_native_platform_factory.cpp  test_sdl_event_adapter.cpp
v2/native/headless/: CMakeLists.txt
v2/native/headless/goldens/: headless-host-trace.txt  headless-semantics.json
v2/native/headless/include/: HeadlessConformanceHost.h
v2/native/headless/src/: HeadlessConformanceHost.cpp  main.cpp
v2/native/headless/tests/: test_headless_conformance.cpp
v2/native/linux/: CMakeLists.txt
v2/native/linux/tests/: test_linux_native_host.cpp
v2/native/macos/: CMakeLists.txt
v2/native/macos/cmake/: VerifyNativeOutput.cmake
v2/native/macos/fui-rs-app/: Cargo.toml
v2/native/macos/include/: MacosNativeHost.h
v2/native/macos/src/: MacosNativeHost.cpp  NativeFuiHostServices.cpp  main.cpp
v2/native/macos/tests/: test_macos_native_host.cpp
v2/native/windows/: CMakeLists.txt
v2/native/windows/cmake/: VerifyWindowsNativeDependencies.cmake  VerifyWindowsNativeOutput.cmake  VerifyWindowsShellLaunch.ps1
v2/native/windows/tests/: test_windows_native_host.cpp
v2/ui/: CMakeLists.txt  exports.txt  native-exports.apple  native-exports.map  playwright.config.ts  tsconfig.json
v2/ui/browser/: bridge-harness.ts  index.html
v2/ui/include/: effindom_ui.h
v2/ui/scripts/: build_all.sh  build_wasm_arch.sh
v2/ui/src/: Api.cpp  CommandBuilder.h  UiColor.h  UiDebugTreeProjector.cpp  UiDebugTreeProjector.h  UiEventSink.cpp  UiEventSink.h  UiFixedPitchTabs.cpp  UiFixedPitchTabs.h  UiFocusCoordinator.cpp  UiFocusCoordinator.h  UiFrameCommitCoordinator.cpp  UiFrameCommitCoordinator.h  UiGridLayoutSource.h  UiInputRouter.cpp  UiInputRouter.h  UiLayoutCoordinator.cpp  UiLayoutCoordinator.h  UiNodeStore.cpp  UiNodeStore.h  UiNodeStoreAccess.h  UiNodeVisualEncoder.cpp  UiNodeVisualEncoder.h  UiPlatformHost.cpp  UiPlatformHost.h  UiRuntime.cpp  UiRuntime.h  UiRuntimeBoxModel.cpp  UiRuntimeCallbacks.cpp  UiRuntimeClipboard.cpp  UiRuntimeCrossSelection.cpp  UiRuntimeEditing.cpp  UiRuntimeEditingGeometry.cpp  UiRuntimeEditingTextState.cpp  UiRuntimeGrid.cpp  UiRuntimeInput.cpp  UiRuntimeNodes.cpp  UiRuntimeText.cpp  UiRuntimeTextLayout.cpp  UiRuntimeTextNonWrap.cpp  (+24 more)
v2/ui/tests/: TestUiSupport.cpp  TestUiSupport.h  commit_frame_baseline.md  test_ui.cpp  test_ui_command_builder.cpp  test_ui_commit_frame.cpp  test_ui_cross_selection.cpp  test_ui_debug_tree.cpp  test_ui_editing.cpp  test_ui_fixed_pitch_tabs.cpp  test_ui_focus_coordinator.cpp  test_ui_grid.cpp  test_ui_input.cpp  test_ui_layout_text.cpp  test_ui_misc.cpp  test_ui_node_store_access.cpp  test_ui_platform_host.cpp  test_ui_portals.cpp  test_ui_runtime_api.cpp  test_ui_scroll.cpp  test_ui_semantic.cpp  test_ui_shaping_resources.cpp  test_ui_text_edit_descriptor.cpp  test_ui_text_input.cpp  test_ui_text_layout.cpp  test_ui_text_selection.cpp  test_ui_text_wrapped.cpp
v2/ui/tests/fixtures/: wrapped_large_document.txt
v2/ui/tests/integration/: effindom_ui_bridge.spec.ts
(+113 files in other folders)
