add_subdirectory(core)
add_subdirectory(ui)

if(NOT EMSCRIPTEN)
    if(EFFINDOM_BUILD_NATIVE_HEADLESS)
        add_subdirectory(native/headless)
    endif()
    if(APPLE AND EFFINDOM_BUILD_NATIVE_MACOS)
        enable_language(OBJCXX)
    endif()
    if((APPLE AND EFFINDOM_BUILD_NATIVE_MACOS) OR
       (WIN32 AND EFFINDOM_BUILD_NATIVE_WINDOWS) OR
       (CMAKE_SYSTEM_NAME STREQUAL "Linux" AND EFFINDOM_BUILD_NATIVE_LINUX))
        add_subdirectory(native/common)
    endif()
    if(APPLE AND EFFINDOM_BUILD_NATIVE_MACOS)
        add_subdirectory(native/macos)
    endif()
    if(WIN32 AND EFFINDOM_BUILD_NATIVE_WINDOWS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/native/windows/CMakeLists.txt")
        add_subdirectory(native/windows)
    endif()
    if(CMAKE_SYSTEM_NAME STREQUAL "Linux" AND EFFINDOM_BUILD_NATIVE_LINUX)
        add_subdirectory(native/linux)
    endif()
endif()
